fix: import project button alignment

--- a/botfront/imports/ui/components/settings/style.import.less
+++ b/botfront/imports/ui/components/settings/style.import.less
@@ -3,10 +3,12 @@
         border-style: none;
     }
     .ui.button.export-option{
-        margin: 0.5em;
+        margin-bottom: 0.5em;
+        margin-top: 0.5em;
     }
     .ui.dropdown.export-option{
-        margin: 0.5em;
+        margin-bottom: 0.5em;
+        margin-top: 0.5em;
     }
 }
 
